--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title> Learnlab</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom css -->
     <link rel="stylesheet" href="custom.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <!-- favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="images/favicon.jpg">
 </head>
 
@@ -21,7 +23,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container mt-4">
                     <a class="navbar-brand fw-bold fs-1 text-info" href="#">Learnlab</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -42,9 +44,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link px-4" aria-current="page" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Register</a>
                             </li>
                         </ul>
                         <button class="btn btn-outline-info fw-semibold fs-5 rounded-1 px-4"
@@ -69,7 +68,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption h-text">
                             <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the
                                 readable
@@ -82,7 +81,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption h-text">
                             <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the
                                 readable content of
@@ -94,7 +93,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption h-text">
                             <h1 class="fw-bold my-2">Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content of
                                 a page when looking at its layout.</p>
@@ -136,8 +135,8 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-1.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Fundamental Of UI/UX Design</h3>
@@ -147,8 +146,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-2.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Javascript Basic to advanced</h3>
@@ -158,8 +157,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-3.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Fullstack Web Development</h3>
@@ -169,8 +168,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-4.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Digital Marketing</h3>
@@ -180,8 +179,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-5.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Photography Basic Rules</h3>
@@ -191,8 +190,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 justify-content-center">
-                    <div class="d-flex mt-4 text-start border rounded align-items-center">
+                <div class="col-lg-6 col-md-12 d-none d-lg-block">
+                    <div class="d-flex mb-3 text-start border rounded align-items-center">
                         <img src="images/course/course-6.png" alt="">
                         <div class="ms-4 me-4">
                             <h3 class="fs-4 fw-bold">Motion Graphics</h3>
@@ -212,18 +211,50 @@
 
         <!-- Ready to join start -->
         <section class="container">
-            <div class="row">
-                <div class="d-flex my-5 py-5">
-                    <div class="p-5 bg-info text-white rounded-start">
-                        <div class="ms-4 my-4">
-                            <h2>Ready to join?</h2>
-                            <p>It is a long established fact that a reader will be distracted by the
-                                readable content of a page when looking at its layout</p>
-                        </div>
+            <div class="row p-3 mt-5">
+                <div
+                    class="col-12 d-flex align-items-center justify-content-evenly flex-column flex-lg-row p-5 bg-info text-white rounded-2">
+
+                    <div class="p-4">
+                        <h2>Ready to join?</h2>
+                        <p>It is a long established fact that a reader will be distracted by the
+                            readable content of a page when looking at its layout</p>
                     </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center p-5 bg-info text-white rounded-end">
-                        <button class="btn btn-lg btn-light text-info fw-normal rounded-1 px-4 me-4"
-                            type="button">Register Now</button>
+                    <div>
+                        <button type="button" class="btn btn-lg btn-light text-info fw-normal rounded-1 px-4"
+                            data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register
+                            Now</button>
+
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content d-flex align-items-center">
+                                    <div class="modal-header text-info">
+                                        <h5 class="modal-title" id="exampleModalLabel">Sign Up</h5>
+
+                                    </div>
+                                    <div class="modal-body text-dark">
+                                        <form>
+                                            <div class="mb-3 mt-4">
+                                                <label for="email" class="col-form-label fw-semibold">Email:</label>
+                                                <input type="text" class="form-control" id="email">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="password"
+                                                    class="col-form-label fw-semibold">Password:</label>
+                                                <input type="password" class="form-control" id="password">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary rounded-1"
+                                            data-bs-dismiss="modal">Cancel</button>
+                                        <button type="button"
+                                            class="btn btn-primary rounded-1 btn-info text-white">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -241,52 +272,48 @@
                     content of a page when looking at its layout.
                 </p>
             </div>
-
+            <!-- accordion items start -->
             <div class="row justify-content-center">
-                <div class="col-6">
+                <div class="col-lg-8 col-md-12">
                     <div class="accordion" id="accordionExample">
-                        <div class="accordion-item rounded-1 mb-3">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button collapsed fw-bold p-4 border-0" type="button"
+                        <div class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header border rounded" id="headingOne">
+                                <button class="accordion-button collapsed fw-bold p-4" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                                     aria-controls="collapseOne">
-                                    What is the css box model?
-                                </button>
+                                    What is the difference between Flexbox and Grid? </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    In CSS, the term "box model" is used when talking about design and layout.
-
-                                    The CSS box model is essentially a box that wraps around every HTML element. It
-                                    consists of: margins, borders, padding, and the actual content.
+                                    Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox
+                                    can work on either row or columns at a time, but Grids can work on both.
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item rounded-1 mb-3">
-                            <h2 class="accordion-header" id="headingTwo">
+                        <div class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header border rounded" id="headingTwo">
                                 <button class="accordion-button collapsed fw-bold p-4" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
                                     aria-controls="collapseTwo">
-                                    What is the css box model?
+                                    What is the difference between Bootstrap and Tailwind?
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    In CSS, the term "box model" is used when talking about design and layout.
-
-                                    The CSS box model is essentially a box that wraps around every HTML element. It
-                                    consists of: margins, borders, padding, and the actual content.
+                                    Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                                    possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a
+                                    neat UI with more flexibility and uniqueness.
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item rounded-1 mb-5">
-                            <h2 class="accordion-header" id="headingThree">
+                        <div class="accordion-item border-0 mb-3">
+                            <h2 class="accordion-header border rounded" id="headingThree">
                                 <button class="accordion-button collapsed fw-bold p-4" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                                     aria-controls="collapseThree">
-                                    What is the css box model?
+                                    What is css box model?
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -299,14 +326,33 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="accordion-item border-0 mb-5">
+                            <h2 class="accordion-header border rounded" id="headingFrou">
+                                <button class="accordion-button collapsed fw-bold p-4" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                    aria-controls="collapseFour">
+                                    What is semantic tag?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    The HTML semantics refers to the tags that provide meaning to an HTML page rather
+                                    than just presentation. It makes HTML more comprehensible by better defining the
+                                    different sections and layout of web pages.
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- accordion items end -->
+
         </section>
         <!-- FAQ section end -->
 
         <!-- Trusted by section start -->
-        <section class="container">
+        <section class="container d-none d-lg-block">
             <div class="py-5 my-5">
                 <div class="flex-column text-center mt-4">
                     <h2 class="fs-1 fw-bold">Trusted by over 800+ companies</h2>
